--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ requests
 opentelemetry-distro==0.28b0
 opentelemetry-instrumentation==0.28b0
 opentelemetry-exporter-otlp==1.9.0
+opentelemetry-api==1.9.0
