--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,23 @@
 version: "2.4"
 
 services:
-
-  fastapi-service:
-      build:
-        context: .
-      image: sample-fastapi-app
+  fastapi-with-db:
+      image: signoz/sample-fastapi-with-db
       ports:
       - "5000:5000"
       environment:
-      - DB_HOST=mongo
+      - REDIS_HOST=redisi
+      - MONGO_HOST=mongo
+      - OTEL_METRICS_EXPORTER=none
+      - OTEL_RESOURCE_ATTRIBUTES=service.name=fastAPI3
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://stagingapp.signoz.io:4317
+
   mongo:
     image: mongo:latest
+    ports:
+    - 27017
+  redis:
+    image: redis:latest
+    ports:
+    - 6379
     
