--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
       - REDIS_HOST=redis
       - MONGO_HOST=mongo
       - OTEL_METRICS_EXPORTER=none
-      - OTEL_RESOURCE_ATTRIBUTES=service.name=fastAPI3
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://stagingapp.signoz.io:4317
+      - OTEL_RESOURCE_ATTRIBUTES=service.name=fastAPI
+      - OTEL_EXPORTER_OTLP_ENDPOINT=<IP of SigNoz>:4317
       depends_on:
       - mongo
       - redis
