--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,4 +22,10 @@ services:
     image: redis
     ports:
     - 6379
-    
+  mongodb-exporter:
+      image: percona/mongodb_exporter:0.20
+      command: --mongodb.uri=mongodb://mongo:27017
+      ports:
+      - 9216:9216
+      depends_on:
+      - mongo
